--- a/docs-src/css/docs.css
+++ b/docs-src/css/docs.css
@@ -458,6 +458,16 @@ pre, pre code {
 	font-size: 1em;
 }
 
+iframe {
+	border: 4px solid #e1e1e1;
+	width: 100%;
+	height: 35em;
+}
+
+iframe.short {
+	height: 25em;
+}
+
 /* Page Footer
 ----------------------- */
 
