--- a/src/modules/main/index.styl
+++ b/src/modules/main/index.styl
@@ -3,3 +3,24 @@
   max-width: 1400px;
 }
 
+.container {
+  border: 2px solid black;
+  display: block;
+  float: left;
+  width: 150px;
+  height: 200px;
+  margin: 1em;
+}
+
+.card {
+  display: block;
+  width: 110px;
+  height: 160px;
+  margin: 10px;
+  background-color: blue;
+}
+
+button {
+  clear:both;
+  margin-top:2em;
+}
